# beats-studio

./: .dockerignore  .gitignore  Dockerfile  PLAN.md  README.md  index.html  nginx.conf  package-lock.json  package.json
.claude/: settings.local.json
docs/: RAILWAY_DEPLOY.md  REMIX.md  RESEARCH_DEMUCS.md
public/sample-stems/: manifest.json
server/: .dockerignore  Dockerfile  main.py  pyproject.toml
src/: App.css  App.tsx  index.css  types.ts
src/audio/: audioEngine.ts  lookaheadScheduler.ts
src/components/: Remix.tsx  SongAnalysis.css  SongAnalysis.tsx  StepGrid.tsx  TransportBar.tsx
src/state/: useStudioStore.ts
src/utils/: stemStorage.ts
