[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.9",
    "demucs>=4.0.0",
    "torch>=2.2.0",
    "torchaudio>=2.2.0",
    "torchcodec>=0.2.0",
]
